--- a/TFE/Base.lproj/Main.storyboard
+++ b/TFE/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6206.8" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="10w-ke-JC6">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="10w-ke-JC6">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7026.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Swiping-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="SwipeViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -17,10 +18,18 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Swiping" id="i6t-Ji-ETa">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="WeR-Vq-moV">
+                            <connections>
+                                <segue destination="XgO-L2-NZm" kind="show" id="5lR-FI-kFp"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1677" y="136"/>
+            <point key="canvasLocation" x="2392" y="-561"/>
         </scene>
         <!--My Friends-->
         <scene sceneID="cvR-wP-aQt">
@@ -43,12 +52,20 @@
                             <outlet property="delegate" destination="OjU-NI-juH" id="1zH-Gd-d18"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="My Friends" id="bOV-nE-Cl0"/>
+                    <navigationItem key="navigationItem" title="My Friends" id="bOV-nE-Cl0">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="zy1-8g-a6d">
+                            <connections>
+                                <action selector="addButtonTouched:" destination="OjU-NI-juH" id="osG-ea-EzH"/>
+                                <segue destination="CAL-bQ-3tP" kind="unwind" identifier="unwindToFriend" unwindAction="unwindToFriendTableViewController:" id="2bB-ip-Wzf"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XL1-WS-Lz6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="CAL-bQ-3tP" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="838" y="-1538"/>
+            <point key="canvasLocation" x="1620" y="406"/>
         </scene>
         <!--Friend Table-->
         <scene sceneID="46v-Xq-Kwb">
@@ -64,6 +81,9 @@
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aOM-Bl-9md" id="LUq-ek-peA">
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="vXZ-lx-hvc" kind="show" id="NSw-hm-cbB"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -72,15 +92,10 @@
                         </connections>
                     </tableView>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Title" id="hAa-lB-cQY">
-                        <barButtonItem key="leftBarButtonItem" title="Friends" id="6im-T7-NpR">
+                    <navigationItem key="navigationItem" title="Groups" id="hAa-lB-cQY">
+                        <barButtonItem key="rightBarButtonItem" title="Friends" id="PIn-0a-pKT">
                             <connections>
-                                <segue destination="OjU-NI-juH" kind="show" id="5sl-qY-PsH"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="fvF-Ic-mXR">
-                            <connections>
-                                <segue destination="XgO-L2-NZm" kind="show" id="pZu-VF-pNy"/>
+                                <segue destination="OjU-NI-juH" kind="show" identifier="AddGroup" id="hIG-NU-9J6"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -89,9 +104,9 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vjZ-fz-4bj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-90" y="-734"/>
+            <point key="canvasLocation" x="1620" y="-561"/>
         </scene>
-        <!--View Controller-->
+        <!--Create Candy-->
         <scene sceneID="0Fm-xp-81r">
             <objects>
                 <viewController id="XgO-L2-NZm" sceneMemberID="viewController">
@@ -104,12 +119,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Create Candy" id="ZpC-gr-6IE"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ubE-cl-GB6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="736" y="-682"/>
+            <point key="canvasLocation" x="2392" y="392"/>
         </scene>
-        <!--Log In View Controller-->
+        <!--Log In-->
         <scene sceneID="kPM-ko-Gm8">
             <objects>
                 <viewController id="2yF-yU-JQ1" customClass="FBLogInViewController" sceneMemberID="viewController">
@@ -123,7 +139,7 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cLY-L0-A9W" customClass="FBLoginView">
                                 <rect key="frame" x="200" y="275" width="200" height="50"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.0" green="0.39973417291516944" blue="0.78369140625" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="DCl-Ei-WWF"/>
                                     <constraint firstAttribute="height" constant="50" id="HqA-4D-5lq"/>
@@ -132,21 +148,84 @@
                                     <outlet property="delegate" destination="2yF-yU-JQ1" id="9wN-fl-awg"/>
                                 </connections>
                             </view>
+                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4Wa-Gd-xcF">
+                                <rect key="frame" x="103" y="138" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="Fok-OM-vR1"/>
+                                    <constraint firstAttribute="height" constant="50" id="mle-fW-I2T"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="Fok-OM-vR1"/>
+                                        <exclude reference="mle-fW-I2T"/>
+                                    </mask>
+                                </variation>
+                            </view>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="status" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xql-tF-3ih">
+                                <rect key="frame" x="103" y="94" width="145" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dhz-Sa-67K">
+                                <rect key="frame" x="161" y="123" width="156" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="4Wa-Gd-xcF" firstAttribute="leading" secondItem="SrJ-Xe-7jZ" secondAttribute="leadingMargin" constant="177" id="4Ac-wk-kOg"/>
+                            <constraint firstItem="4Wa-Gd-xcF" firstAttribute="top" secondItem="xql-tF-3ih" secondAttribute="bottom" constant="8" id="BKe-aJ-IsP"/>
+                            <constraint firstItem="xql-tF-3ih" firstAttribute="leading" secondItem="SrJ-Xe-7jZ" secondAttribute="leadingMargin" constant="177" id="CJP-Sp-ib2"/>
+                            <constraint firstItem="4Wa-Gd-xcF" firstAttribute="top" secondItem="xql-tF-3ih" secondAttribute="bottom" constant="8" id="CLB-w8-yhy"/>
+                            <constraint firstItem="xql-tF-3ih" firstAttribute="top" secondItem="BH9-wa-wZr" secondAttribute="bottom" constant="25" id="Kl0-yN-YYs"/>
+                            <constraint firstItem="dhz-Sa-67K" firstAttribute="top" secondItem="xql-tF-3ih" secondAttribute="bottom" constant="8" id="Lyx-c3-rdT"/>
+                            <constraint firstItem="dhz-Sa-67K" firstAttribute="leading" secondItem="4Wa-Gd-xcF" secondAttribute="trailing" constant="8" id="QdF-Tg-dtd"/>
                             <constraint firstAttribute="centerY" secondItem="cLY-L0-A9W" secondAttribute="centerY" id="TB4-My-tPw"/>
+                            <constraint firstItem="dhz-Sa-67K" firstAttribute="leading" secondItem="4Wa-Gd-xcF" secondAttribute="trailing" constant="8" id="YAq-Jr-3kz"/>
+                            <constraint firstItem="dhz-Sa-67K" firstAttribute="top" secondItem="xql-tF-3ih" secondAttribute="bottom" constant="8" id="aMd-U0-fuV"/>
+                            <constraint firstItem="cLY-L0-A9W" firstAttribute="top" secondItem="dhz-Sa-67K" secondAttribute="bottom" constant="136" id="c4V-DG-SfN"/>
+                            <constraint firstItem="cLY-L0-A9W" firstAttribute="top" secondItem="4Wa-Gd-xcF" secondAttribute="bottom" constant="107" id="hVI-rP-ECL"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="xql-tF-3ih" secondAttribute="trailing" constant="246" id="o30-nQ-BPR"/>
                             <constraint firstAttribute="centerX" secondItem="cLY-L0-A9W" secondAttribute="centerX" id="vr4-Nq-Lhg"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="dhz-Sa-67K" secondAttribute="trailing" constant="177" id="yxj-iL-Tev"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="CJP-Sp-ib2"/>
+                                <exclude reference="Kl0-yN-YYs"/>
+                                <exclude reference="o30-nQ-BPR"/>
+                                <exclude reference="4Ac-wk-kOg"/>
+                                <exclude reference="BKe-aJ-IsP"/>
+                                <exclude reference="CLB-w8-yhy"/>
+                                <exclude reference="Lyx-c3-rdT"/>
+                                <exclude reference="QdF-Tg-dtd"/>
+                                <exclude reference="YAq-Jr-3kz"/>
+                                <exclude reference="aMd-U0-fuV"/>
+                                <exclude reference="yxj-iL-Tev"/>
+                                <exclude reference="c4V-DG-SfN"/>
+                                <exclude reference="hVI-rP-ECL"/>
+                            </mask>
+                        </variation>
                     </view>
-                    <navigationItem key="navigationItem" id="jDe-6R-7nI"/>
+                    <navigationItem key="navigationItem" title="Log In" id="6b2-DR-fde">
+                        <barButtonItem key="rightBarButtonItem" title="Groups" id="v8r-V7-ptg">
+                            <connections>
+                                <segue destination="wuR-fK-ud5" kind="show" id="B9u-YU-mFQ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="loginView" destination="cLY-L0-A9W" id="N6i-sl-urd"/>
+                        <outlet property="nameLabel" destination="dhz-Sa-67K" id="2Sn-qv-Mmw"/>
+                        <outlet property="profilePictureView" destination="4Wa-Gd-xcF" id="al1-nN-NJT"/>
+                        <outlet property="statusLabel" destination="xql-tF-3ih" id="g9f-5p-HHw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1Nq-Aa-cP5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="722" y="136"/>
+            <point key="canvasLocation" x="890" y="-561"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="AgL-F3-0OY">
@@ -164,7 +243,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iOH-5v-gZk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-62" y="136"/>
+            <point key="canvasLocation" x="118" y="-561"/>
         </scene>
     </scenes>
 </document>
