--- a/TFE/Base.lproj/Main.storyboard
+++ b/TFE/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="10w-ke-JC6">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6206.8" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="10w-ke-JC6">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7026.1"/>
+        <capability name="Constraints with attributes relative to the layout margin" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Swiping-->
@@ -31,7 +31,75 @@
             </objects>
             <point key="canvasLocation" x="2392" y="-561"/>
         </scene>
-        <!--My Friends-->
+        <!--Search Settings-->
+        <scene sceneID="xeO-Jy-FGg">
+            <objects>
+                <viewController id="xt9-EP-PmL" customClass="SearchSettingViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="1f1-tr-j2z"/>
+                        <viewControllerLayoutGuide type="bottom" id="HMW-IF-dnK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="fkk-Fa-Iz2">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Number of results" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Nnv-6Q-huV">
+                                <rect key="frame" x="36" y="244" width="528" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="j2D-DA-Nll"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Location Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dJ2-js-3fG">
+                                <rect key="frame" x="36" y="304" width="528" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Taw-fE-GcC"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Item" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c60-n4-dyY">
+                                <rect key="frame" x="36" y="364" width="528" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="jwI-Qc-F1C"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="dJ2-js-3fG" firstAttribute="top" secondItem="Nnv-6Q-huV" secondAttribute="bottom" constant="30" id="AlA-0F-48A"/>
+                            <constraint firstItem="c60-n4-dyY" firstAttribute="leading" secondItem="fkk-Fa-Iz2" secondAttribute="leadingMargin" constant="20" id="DWe-ed-K4a"/>
+                            <constraint firstItem="Nnv-6Q-huV" firstAttribute="leading" secondItem="fkk-Fa-Iz2" secondAttribute="leadingMargin" constant="20" id="GWm-xd-dZm"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="dJ2-js-3fG" secondAttribute="trailing" constant="20" id="LQx-SQ-yRz"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="c60-n4-dyY" secondAttribute="trailing" constant="20" id="fWk-X9-A6n"/>
+                            <constraint firstItem="dJ2-js-3fG" firstAttribute="leading" secondItem="fkk-Fa-Iz2" secondAttribute="leadingMargin" constant="20" id="hJa-Zt-FQD"/>
+                            <constraint firstItem="Nnv-6Q-huV" firstAttribute="top" secondItem="1f1-tr-j2z" secondAttribute="bottom" constant="180" id="rpE-4I-1zG"/>
+                            <constraint firstItem="c60-n4-dyY" firstAttribute="top" secondItem="dJ2-js-3fG" secondAttribute="bottom" constant="30" id="teO-jz-Snw"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Nnv-6Q-huV" secondAttribute="trailing" constant="20" id="vsP-b5-bju"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Search Settings" id="mgP-13-sxN">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="WVb-ka-zMa">
+                            <connections>
+                                <segue destination="rL7-72-qPe" kind="unwind" identifier="Save" unwindAction="unwindToSelfViewController:" id="hKy-Uu-OoY"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="itemField" destination="c60-n4-dyY" id="FRn-2V-vTr"/>
+                        <outlet property="locationField" destination="dJ2-js-3fG" id="kjL-zX-sl3"/>
+                        <outlet property="numberField" destination="Nnv-6Q-huV" id="HUx-Cn-uga"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fiK-Gx-F3e" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="rL7-72-qPe" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="806" y="389"/>
+        </scene>
+        <!--List Of Friends Table View Controller-->
         <scene sceneID="cvR-wP-aQt">
             <objects>
                 <tableViewController id="OjU-NI-juH" customClass="ListOfFriendsTableViewController" sceneMemberID="viewController">
@@ -52,7 +120,18 @@
                             <outlet property="delegate" destination="OjU-NI-juH" id="1zH-Gd-d18"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="My Friends" id="bOV-nE-Cl0">
+                    <navigationItem key="navigationItem" id="bOV-nE-Cl0">
+                        <nil key="title"/>
+                        <button key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="7QD-JE-1Mz">
+                            <rect key="frame" x="180" y="7" width="240" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <state key="normal" title="Set Search">
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <segue destination="xt9-EP-PmL" kind="show" id="buE-ZY-rVI"/>
+                            </connections>
+                        </button>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="zy1-8g-a6d">
                             <connections>
                                 <action selector="addButtonTouched:" destination="OjU-NI-juH" id="osG-ea-EzH"/>
@@ -82,7 +161,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="vXZ-lx-hvc" kind="show" id="NSw-hm-cbB"/>
+                                    <segue destination="vXZ-lx-hvc" kind="show" identifier="Swipe" id="NSw-hm-cbB"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -92,7 +171,18 @@
                         </connections>
                     </tableView>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Groups" id="hAa-lB-cQY">
+                    <navigationItem key="navigationItem" id="hAa-lB-cQY">
+                        <nil key="title"/>
+                        <button key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="4hG-6U-naT">
+                            <rect key="frame" x="180" y="7" width="240" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <state key="normal" title="Reload">
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="reloadData:" destination="wuR-fK-ud5" eventType="touchUpInside" id="vPY-pQ-hFg"/>
+                            </connections>
+                        </button>
                         <barButtonItem key="rightBarButtonItem" title="Friends" id="PIn-0a-pKT">
                             <connections>
                                 <segue destination="OjU-NI-juH" kind="show" identifier="AddGroup" id="hIG-NU-9J6"/>
