--- a/TFE/Base.lproj/Main.storyboard
+++ b/TFE/Base.lproj/Main.storyboard
@@ -99,10 +99,10 @@
             </objects>
             <point key="canvasLocation" x="806" y="389"/>
         </scene>
-        <!--List Of Friends Table View Controller-->
+        <!--Friend Table View Controller-->
         <scene sceneID="cvR-wP-aQt">
             <objects>
-                <tableViewController id="OjU-NI-juH" customClass="ListOfFriendsTableViewController" sceneMemberID="viewController">
+                <tableViewController id="OjU-NI-juH" customClass="FriendTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="p5a-pl-SHm">
                         <rect key="frame" x="0.0" y="64" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -149,7 +149,7 @@
         <!--Friend Table-->
         <scene sceneID="46v-Xq-Kwb">
             <objects>
-                <tableViewController storyboardIdentifier="TableView" id="wuR-fK-ud5" userLabel="Friend Table" customClass="FriendTableViewController" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="TableView" id="wuR-fK-ud5" userLabel="Friend Table" customClass="GroupTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="k9n-Z6-nbA">
                         <rect key="frame" x="0.0" y="64" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
