Beginning work on new style changes to the storyboard and UI

--- a/TFE/Base.lproj/Main.storyboard
+++ b/TFE/Base.lproj/Main.storyboard
@@ -191,6 +191,24 @@
             </objects>
             <point key="canvasLocation" x="1620" y="186"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="Igj-w5-6JS">
+            <objects>
+                <viewController id="Zpp-af-TU2" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="nOs-ge-3Gl"/>
+                        <viewControllerLayoutGuide type="bottom" id="Ggw-Oe-5Mb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Tdc-2D-kef">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UII-mE-xTo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1621" y="890"/>
+        </scene>
         <!--Invite Friends-->
         <scene sceneID="cvR-wP-aQt">
             <objects>
@@ -427,6 +445,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="YmC-sW-hCE"/>
+        <segue reference="5lR-FI-kFp"/>
     </inferredMetricsTieBreakers>
 </document>
